--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -157,12 +157,22 @@
           <h1>APPOINTA</h1>
           <h4>An interview scheduling tool</h4>
         </div>
-
       </div>
     </div>
   </div>
 
+  <div class="wrapper ">
+    <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="textItalic">Individual work, June, 2022</h4>
+          <h4>Figma/HTML/CSS/JS</h4>
 
+
+        </div>
+      </div>
+    </div>
+  </div>
 
   <main class="">
     <nav class="section-nav APPOINTA">
@@ -177,7 +187,9 @@
 
             <li class=""><a href="#personas">Personas</a></li>
             <li class=""><a href="#insights">Insights</a></li>
-            <li class=""><a href="#features">Initial concepts </a></li>
+            <li class=""><a href="#userFlow">User flow </a></li>
+
+            <li class=""><a href="#features">Features </a></li>
           </ul>
         </li>
         <li><a href="#ideation">Design, test, iterate </a>
@@ -400,7 +412,7 @@
               </div>
             </div>
           </div>
-          <img class="" src="usersRelationship.svg" alt="Pain points">
+          <img class="modal-target" src="usersRelationship.svg" alt="Pain points">
 
         </div>
         <!-- uses cases -->
@@ -428,12 +440,13 @@
             <div class="Grid-cell">
               <div class="element">
 
-                <img class="" src="userJourney.svg" alt="Pain points">
+                <img class="modal-target" src="userJourney.svg" alt="user Journey">
               </div>
             </div>
 
           </div>
         </div>
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
@@ -578,11 +591,13 @@
                       class="textUnderline APPOINTA">calendars</strong> , all the <strong
                       class="textUnderline APPOINTA">availability</strong>
                     will be in one place easy to find by candidates</h4>
-                  <h4>Hiring managers and recruiters define the <strong class="textUnderline APPOINTA">interview type</strong> in this app. the
+                  <h4>Hiring managers and recruiters define the <strong
+                      class="textUnderline APPOINTA">interview type</strong> in this app. the
                     candidate will be able to select a date and time and put some notes from a link
                     that belongs to a type of the interview
                   </h4>
-                  <h4><strong class="textUnderline APPOINTA">Interview skills</strong> need to be trained and approved by the recruiter or hiring
+                  <h4><strong class="textUnderline APPOINTA">Interview skills</strong> need to be
+                    trained and approved by the recruiter or hiring
                     manager based on my interview. Interview skills will only add or modify in the
                     admin account
                   </h4>
@@ -594,7 +609,51 @@
           </div>
         </section>
         <!-- insights -->
+        <section id="userFlow">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> User flows</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHS"></div>
+          <!-- user flow -->
+          <div class="wrapper">
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
 
+                  <img class="modal-target" src="userflow_Recruiter.svg" alt="user flow">
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4>This is the <strong class="textUnderline APPOINTA">recruiter</strong> user flow</h4>
+
+                <h4 class="leftVerLine APPOINTA">New users will set up their <strong class="textUnderline APPOINTA">team</strong> and <strong class="textUnderline APPOINTA">interview skills</strong> first</h4>
+                <h4 class="leftVerLine APPOINTA">Afterwards, they will add <strong class="textUnderline APPOINTA">interview types</strong> with <strong class="textUnderline APPOINTA">required interview skills</strong></h4>
+                <h4 class="leftVerLine APPOINTA">Eventually, team members' interview skills and required interview <strong class="textUnderline APPOINTA">skills will be matched</strong> automatically</h4>
+                <h4 class="leftVerLine APPOINTA">Interview <strong class="textUnderline APPOINTA">availability</strong> and <strong class="textUnderline APPOINTA">capacity</strong> depend on how many <strong class="textUnderline APPOINTA">available team members</strong> with the <strong class="textUnderline APPOINTA">required skills</strong> for a type of interview</h4>
+
+
+              </div>
+            </div>
+          </div>
+          <!-- user flow -->
+        </section>
         <section id="features">
           <!-- Arrow -->
           <div class="wrapper">
@@ -602,7 +661,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Initial concepts</p>
+                    <p class="tArrow"> Features</p>
                     <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -742,10 +801,10 @@
         <!-- Arrow -->
         <div class="blankHS"></div>
         <!-- wireframes -->
-        <div class="Grid Grid--full u-textCenter ">
+        <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter" src="Wireframes.png" alt="Pain points">
+              <img class="shadowFilter modal-target" src="Wireframes.png" alt="Pain points">
             </div>
           </div>
         </div>
@@ -769,15 +828,31 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
+
+
         <!-- mid-fiWireframes -->
-        <div class="Grid Grid--full u-textCenter">
+        <div class="Grid Grid--full u-textCenter wrapper">
+
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter" src="userflow_RecruiterOnboarding.svg" alt="Pain points">
+              <img class="shadowFilter modal-target" src="userflow_login_signup.svg" alt="Pain points">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
-                <h5> <strong>Recruiters account - onboarding&#58;</strong> Invite team member, setup
+                <h5> <strong>Log in &#47; sign up &#58;</strong> Enter email, sign up or log in
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilter modal-target" src="userflow_Recruiter_newAccount.svg"
+                alt="Recruiters flow">
+            </div>
+            <div class="Grid-cell wrapper">
+              <div class="element">
+                <h5> <strong>New account &#58;</strong> Invite team member, setup
                   team member skills, share link with candidates
                 </h5>
               </div>
@@ -786,16 +861,46 @@
 
           <div class="Grid-cell">
             <div class="element">
-              <img class="" src="../../Placeholder.svg" alt="Pain points">
+              <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
+                alt="Recruiters flow">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
-                <h5> <strong>Recruiters account - profile &#58;</strong> Invite team member, setup
+                <h5> <strong> Create interview &#58;</strong> Invite team member, setup
                   team member skills, share link with candidates
                 </h5>
               </div>
             </div>
           </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduledInterviews.svg"
+                alt="Recruiters flow">
+            </div>
+            <div class="Grid-cell wrapper">
+              <div class="element">
+                <h5> <strong> Scheduled interviews &#58;</strong> Invite team member, setup
+                  team member skills, share link with candidates
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilter modal-target" src="userflow_Recruiter_teamManagement.svg"
+                alt="Recruiters flow">
+            </div>
+            <div class="Grid-cell wrapper">
+              <div class="element">
+                <h5> <strong> Team management &#58;</strong> Invite team member, setup
+                  team member skills, share link with candidates
+                </h5>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <!-- mid-fiWireframes -->
       </section>
@@ -872,7 +977,13 @@
 
 
 
-
+  <!-- The Modal -->
+  <div id="modal" class="modal">
+    <span id="modal-close" class="modal-close">&times;</span>
+    <img id="modal-content" class="modal-content shadowFilter">
+    <div id="modal-caption" class="modal-caption"></div>
+  </div>
+  <!-- The Modal -->
 
 
 
