--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -924,7 +924,7 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="" src="../../Placeholder.svg" alt="Pain points">
+              <img class="" src="onboarding.gif" alt="Pain points">
             </div>
 
           </div>
