--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -641,12 +641,24 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>This is the <strong class="textUnderline APPOINTA">recruiter</strong> user flow</h4>
+                <h4>This is the <strong class="textUnderline APPOINTA">recruiter</strong> user flow
+                </h4>
 
-                <h4 class="leftVerLine APPOINTA">New users will set up their <strong class="textUnderline APPOINTA">team</strong> and <strong class="textUnderline APPOINTA">interview skills</strong> first</h4>
-                <h4 class="leftVerLine APPOINTA">Afterwards, they will add <strong class="textUnderline APPOINTA">interview types</strong> with <strong class="textUnderline APPOINTA">required interview skills</strong></h4>
-                <h4 class="leftVerLine APPOINTA">Eventually, team members' interview skills and required interview <strong class="textUnderline APPOINTA">skills will be matched</strong> automatically</h4>
-                <h4 class="leftVerLine APPOINTA">Interview <strong class="textUnderline APPOINTA">availability</strong> and <strong class="textUnderline APPOINTA">capacity</strong> depend on how many <strong class="textUnderline APPOINTA">available team members</strong> with the <strong class="textUnderline APPOINTA">required skills</strong> for a type of interview</h4>
+                <h4 class="leftVerLine APPOINTA">New users will set up their <strong
+                    class="textUnderline APPOINTA">team</strong> and <strong
+                    class="textUnderline APPOINTA">interview skills</strong> first</h4>
+                <h4 class="leftVerLine APPOINTA">Afterwards, they will add <strong
+                    class="textUnderline APPOINTA">interview types</strong> with <strong
+                    class="textUnderline APPOINTA">required interview skills</strong></h4>
+                <h4 class="leftVerLine APPOINTA">Eventually, team members' interview skills and
+                  required interview <strong class="textUnderline APPOINTA">skills will be
+                    matched</strong> automatically</h4>
+                <h4 class="leftVerLine APPOINTA">Interview <strong
+                    class="textUnderline APPOINTA">availability</strong> and <strong
+                    class="textUnderline APPOINTA">capacity</strong> depend on how many <strong
+                    class="textUnderline APPOINTA">available team members</strong> with the <strong
+                    class="textUnderline APPOINTA">required skills</strong> for a type of interview
+                </h4>
 
 
               </div>
@@ -835,7 +847,8 @@
 
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter modal-target" src="userflow_login_signup.svg" alt="Pain points">
+              <img class="shadowFilter modal-target" src="userflow_login_signup.svg"
+                alt="Pain points">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
@@ -874,8 +887,8 @@
           </div>
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduledInterviews.svg"
-                alt="Recruiters flow">
+              <img class="shadowFilter modal-target"
+                src="userflow_Recruiter_scheduledInterviews.svg" alt="Recruiters flow">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
@@ -920,16 +933,36 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
-        <!-- testing -->
-        <div class="Grid Grid--full u-textCenter wrapper">
+
+        <div class="Grid Grid--gutters Grid--1of3 wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="" src="onboarding.gif" alt="Pain points">
+              <h3 class="">New account</h3>
+              <h5 class="">Insights:</h5>
             </div>
-
           </div>
+
+          <div class="Grid-cell">
+            <div class="element"> <img class="ShadowBox" src="newUser.gif" alt="New User"></div>
+          </div>
+
         </div>
-        <!-- testing -->
+        <div class="blankHM"></div>
+
+        <div class="Grid Grid--gutters Grid--1of3 wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h3 class="">Exsiting account</h3>
+              <h5 class="">Insights:</h5>
+            </div>
+          </div>
+          
+          <div class="Grid-cell">
+            <div class="element"> <img class="ShadowBox" src="existingUser.gif" alt="Existing User"></div>
+          </div>
+
+        </div>
+
       </section>
     </section>
     <div class="blankHS"></div>
