--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -150,24 +150,38 @@
   <!-- Working process -->
   <img class="" src="Appointa.svg" alt="APPOINTA">
 
-  <div class="wrapper ">
+  <div class="wrapper">
+
+
     <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h1>APPOINTA</h1>
-          <h4>An interview scheduling tool</h4>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="wrapper ">
-    <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
+          <h4 class="">An interview scheduling tool</h4>
+          <div class="blankHS"></div>
           <h4 class="textItalic">Individual work, June, 2022</h4>
-          <h4>Figma/HTML/CSS/JS</h4>
+          <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid Grid--gutters Grid--nested">
+                  <div class="Grid-cell">
+                    <div class="">               
+                       <img class="IconSH" src="../../icon/logo_figma.svg" alt="Figma">
+                       <h6 class="">Figma</h6>
 
+                    </div>
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="">
+                      <img class="IconSH" src="../../icon/logo_vsCode.svg" alt="VS Code">
+                      <h6 class="">VS Code</h6>
+                      <h6 class="">HTML/CSS/JS</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -239,23 +253,23 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>My goal is design a <strong class="textUnderline APPOINTA">scheduling
+                <h4>My goal is design a <strong class="textDecor APPOINTA">scheduling
                     tool</strong>
                   for company recruiting interviews.
                   it helps recruiters and hiring managers <strong
-                    class="textUnderline APPOINTA">arrange
+                    class="textDecor APPOINTA">arrange
                     and schedule interviews</strong> with less time and effort. </h4>
 
                 <h4 class="leftVerLine APPOINTA">Recruiters and hiring managers usually invite
                   colleagues to attend interviews. It takes time to <strong
-                    class="textUnderline APPOINTA">find</strong>
+                    class="textDecor APPOINTA">find</strong>
                   candidate and colleague's <strong
-                    class="textUnderline APPOINTA">availability</strong>
+                    class="textDecor APPOINTA">availability</strong>
                   in different calendars and apps.</h4>
 
                 <h4 class="leftVerLine APPOINTA">
-                  Matching colleagues' <strong class="textUnderline APPOINTA">interview
-                    skills</strong> to candidate <strong class="textUnderline APPOINTA">interview
+                  Matching colleagues' <strong class="textDecor APPOINTA">interview
+                    skills</strong> to candidate <strong class="textDecor APPOINTA">interview
                     type</strong> from different team sometimes is a challenge as well.</h4>
               </div>
             </div>
@@ -451,13 +465,13 @@
           <div class="Grid-cell">
             <div class="element">
               <h4>I learned through my research that scheduling interviews fundamentally is to find
-                availability from <strong class="textUnderline APPOINTA"> interviewers</strong> and
-                <strong class="textUnderline APPOINTA">candidates </strong>
+                availability from <strong class="textDecor APPOINTA"> interviewers</strong> and
+                <strong class="textDecor APPOINTA">candidates </strong>
               </h4>
 
-              <h4>In order to have<strong class="textUnderline APPOINTA"> available
-                  interviews</strong>. the Interview <strong class="textUnderline APPOINTA">skill
-                  set</strong> needs match <strong class="textUnderline APPOINTA">interview
+              <h4>In order to have<strong class="textDecor APPOINTA"> available
+                  interviews</strong>. the Interview <strong class="textDecor APPOINTA">skill
+                  set</strong> needs match <strong class="textDecor APPOINTA">interview
                   type</strong></h4>
             </div>
           </div>
@@ -501,14 +515,14 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4 class="leftVerLine APPOINTA">From the <strong
-                    class="textUnderline APPOINTA">hiring manager</strong> interview, I realized the
+                    class="textDecor APPOINTA">hiring manager</strong> interview, I realized the
                   challenge of scheduling interviews is team memebrs' <strong
-                    class="textUnderline APPOINTA">availability and skills</strong> </h4>
+                    class="textDecor APPOINTA">availability and skills</strong> </h4>
                 <h4 class="leftVerLine APPOINTA">From the <strong
-                    class="textUnderline APPOINTA">recruiter </strong> interview, I found team
-                  <strong class="textUnderline APPOINTA">availability</strong> and organizing
-                  <strong class="textUnderline APPOINTA">interview
-                    schedule</strong>, <strong class="textUnderline APPOINTA">notifying
+                    class="textDecor APPOINTA">recruiter </strong> interview, I found team
+                  <strong class="textDecor APPOINTA">availability</strong> and organizing
+                  <strong class="textDecor APPOINTA">interview
+                    schedule</strong>, <strong class="textDecor APPOINTA">notifying
                     people</strong> are important steps to scheude an interview
                 </h4>
               </div>
@@ -588,15 +602,15 @@
 
                   <h4>Checking colleagues' availability takes major time during scheduling an
                     interview. team members are able to sync their<strong
-                      class="textUnderline APPOINTA">calendars</strong> , all the <strong
-                      class="textUnderline APPOINTA">availability</strong>
+                      class="textDecor APPOINTA">calendars</strong> , all the <strong
+                      class="textDecor APPOINTA">availability</strong>
                     will be in one place easy to find by candidates</h4>
                   <h4>Hiring managers and recruiters define the <strong
-                      class="textUnderline APPOINTA">interview type</strong> in this app. the
+                      class="textDecor APPOINTA">interview type</strong> in this app. the
                     candidate will be able to select a date and time and put some notes from a link
                     that belongs to a type of the interview
                   </h4>
-                  <h4><strong class="textUnderline APPOINTA">Interview skills</strong> need to be
+                  <h4><strong class="textDecor APPOINTA">Interview skills</strong> need to be
                     trained and approved by the recruiter or hiring
                     manager based on my interview. Interview skills will only add or modify in the
                     admin account
@@ -641,23 +655,23 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <h4>This is the <strong class="textUnderline APPOINTA">recruiter</strong> user flow
+                <h4>The <strong class="textDecor APPOINTA">recruiter</strong> user flow
                 </h4>
 
                 <h4 class="leftVerLine APPOINTA">New users will set up their <strong
-                    class="textUnderline APPOINTA">team</strong> and <strong
-                    class="textUnderline APPOINTA">interview skills</strong> first</h4>
+                    class="textDecor APPOINTA">team</strong> and <strong
+                    class="textDecor APPOINTA">interview skills</strong> first</h4>
                 <h4 class="leftVerLine APPOINTA">Afterwards, they will add <strong
-                    class="textUnderline APPOINTA">interview types</strong> with <strong
-                    class="textUnderline APPOINTA">required interview skills</strong></h4>
+                    class="textDecor APPOINTA">interview types</strong> with <strong
+                    class="textDecor APPOINTA">required interview skills</strong></h4>
                 <h4 class="leftVerLine APPOINTA">Eventually, team members' interview skills and
-                  required interview <strong class="textUnderline APPOINTA">skills will be
+                  required interview <strong class="textDecor APPOINTA">skills will be
                     matched</strong> automatically</h4>
                 <h4 class="leftVerLine APPOINTA">Interview <strong
-                    class="textUnderline APPOINTA">availability</strong> and <strong
-                    class="textUnderline APPOINTA">capacity</strong> depend on how many <strong
-                    class="textUnderline APPOINTA">available team members</strong> with the <strong
-                    class="textUnderline APPOINTA">required skills</strong> for a type of interview
+                    class="textDecor APPOINTA">availability</strong> and <strong
+                    class="textDecor APPOINTA">capacity</strong> depend on how many <strong
+                    class="textDecor APPOINTA">available team members</strong> with the <strong
+                    class="textDecor APPOINTA">required skills</strong> for a type of interview
                 </h4>
 
 
@@ -803,7 +817,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Wireframes</p>
+                  <p class="tArrow"> Lo-fi Wireframes</p>
                   <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -937,13 +951,20 @@
         <div class="Grid Grid--gutters Grid--1of3 wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h3 class="">New account</h3>
-              <h5 class="">Insights:</h5>
+              <h3 class="">New account testing tasks</h3>
+              <ul>
+                <li>Invite team members</li>
+                <li class="">Setup team members' skills </li>
+                <li class="">Share link with a candidate</li>
+              </ul>
+              <h3 class="">Insights</h3>
+
             </div>
           </div>
 
           <div class="Grid-cell">
-            <div class="element"> <img class="ShadowBox" src="newUser.gif" alt="New User"></div>
+            <div class="element"> <img class="ShadowBox" src="testingNewUser.gif" alt="New User">
+            </div>
           </div>
 
         </div>
@@ -952,13 +973,27 @@
         <div class="Grid Grid--gutters Grid--1of3 wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h3 class="">Exsiting account</h3>
-              <h5 class="">Insights:</h5>
+              <h3 class="">Exsiting account testing tasks</h3>
+              <ul>
+                <li>Create a new type of interview</li>
+                <li>Cancel a scheduled interview</li>
+                <li>Invite team members</li>
+                <li>Setup team members' skills</li>
+                <li>Remove team members from the list</li>
+
+              </ul>
+              <h3 class="">Insights</h3>
+              <ul>
+                <li>Ability to reschedule appointment</li>
+
+
+              </ul>
             </div>
           </div>
-          
+
           <div class="Grid-cell">
-            <div class="element"> <img class="ShadowBox" src="existingUser.gif" alt="Existing User"></div>
+            <div class="element"> <img class="ShadowBox" src="testingExistingUser.gif"
+                alt="Existing User"></div>
           </div>
 
         </div>
@@ -996,7 +1031,7 @@
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
       <h5 class="element ">For more information please visit my website </h5>
-      <a href="https://vickywang.me" class="textUnderline" target="_blank">VICKYWANG.ME</a>
+      <a href="https://vickywang.me" class="textDecor" target="_blank">VICKYWANG.ME</a>
     </div>
   </div>
   <div class="blankHL"></div>
@@ -1024,7 +1059,6 @@
 
 
   <botton id="myBtn">
-
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
         <img id="bottom-arrow" class="ArrowHover" src="../../icon/arrow-top.svg" alt="back to top">
