--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -222,11 +222,11 @@
       <div class="Grid-cell">
         <div class="element">
           <h4>My goal is to design a sentiment analysis tool to help the business owner <strong
-              class="textUnderline SEER">grow their business</strong>. </h4>
+              class="textDecor SEER">grow their business</strong>. </h4>
           <h4>
             The business sentiment analysis tool is a process of collecting and analyzing <strong
-              class="textUnderline SEER">large
-              volumes of data</strong> from <strong class="textUnderline SEER">social networks,
+              class="textDecor SEER">large
+              volumes of data</strong> from <strong class="textDecor SEER">social networks,
               websites, and other sources</strong> to determine what
             people think about a particular company.</h4>
 
@@ -244,7 +244,7 @@
           <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
             research and more.</h4>
           <h4>The customer support team is informed in real-time about any <strong
-              class="textUnderline SEER">negative comments</strong>.
+              class="textDecor SEER">negative comments</strong>.
           </h4>
           <h4>The mentions on social media get detected extremely quickly </h4>
 
@@ -539,7 +539,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Wireframes</p>
+                  <p class="tArrow"> Lo-fi wireframes</p>
                   <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -549,10 +549,10 @@
         <!-- Arrow -->
         <div class="blankHS"></div>
         <!-- wireframes -->
-        <div class="Grid Grid--full u-textCenter ">
+        <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="" src="SEER.png" alt="Wireframes">
+              <img class="modal-target" src="SEER.png" alt="Wireframes">
             </div>
           </div>
         </div>
@@ -577,16 +577,15 @@
         <!-- Arrow -->
         <div class="blankHS"></div>
         <!-- mid-fiWireframes -->
-        <div class="Grid Grid--full u-textCenter">
+        <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="" src="SEER.png" alt="Wireframes">
+              <img class="modal-target" src="SEER.png" alt="Wireframes">
             </div>
             <div class="Grid-cell wrapper">
               <div class="element">
                 <h5> <strong>Recruiters account - onboarding&#58;</strong> Invite team member,
-                  setup
-                  team member skills, share link with candidates
+                  setup team member skills, share link with candidates
                 </h5>
               </div>
             </div>
@@ -633,9 +632,9 @@
 
               <h4>
                 e.g., negative sentiment or most popular posts, do some aggregations per <strong
-                  class="textUnderline SEER">a specific time period </strong>,
-                browse data by <strong class="textUnderline SEER">location</strong> or by the
-                <strong class="textUnderline SEER">device</strong> from which it was posted.
+                  class="textDecor SEER">a specific time period </strong>,
+                browse data by <strong class="textDecor SEER">location</strong> or by the
+                <strong class="textDecor SEER">device</strong> from which it was posted.
               </h4>
 
 
@@ -653,7 +652,7 @@
               <h4>Sentiment analysis helps e-commerce, marketing, advertising, politics, market
                 research and more.</h4>
               <h4>The customer support team is informed in real-time about any <strong
-                  class="textUnderline SEER">negative comments</strong>.
+                  class="textDecor SEER">negative comments</strong>.
               </h4>
               <h4>The mentions on social media get detected extremely quickly </h4>
 
@@ -710,6 +709,13 @@
 
 
 
+  <!-- The Modal -->
+  <div id="modal" class="modal">
+    <span id="modal-close" class="modal-close">&times;</span>
+    <img id="modal-content" class="modal-content shadowFilter">
+    <div id="modal-caption" class="modal-caption"></div>
+  </div>
+  <!-- The Modal -->
 
 
   <!--back to top-->
